Fix spacing for Firefox and Safari.

--- a/app/css/views/LineSidebarView.scss
+++ b/app/css/views/LineSidebarView.scss
@@ -116,7 +116,7 @@
     }
 
     .headway {
-      width: 56px;
+      min-width: 40px;
     }
   }
 
